--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,19 +13,29 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ShareHands_frontend"
         tools:targetApi="31">
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
+
+        <activity android:name=".view.SplashActivity"
+            android:exported="true"
+            android:theme="@style/Theme.ShareHands_frontend.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
+        </activity>
+
+        <activity
+            android:name=".MainActivity"
+            android:exported="false">
+
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
+        <activity android:name=".view.schedule_mgt.MonthlyCalendarActivity"/>
+        <activity android:name=".view.schedule_mgt.WeeklyCalendarActivity"/>
 
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
@@ -40,6 +50,7 @@
                     android:scheme="kakao${NATIVE_APP_KEY}" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
