--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,12 +34,14 @@ android {
     defaultConfig {
         manifestPlaceholders = [NATIVE_APP_KEY: KAKAO_NATIVE_APP_KEY]
     }
-    viewBinding {
+    dataBinding {
         enabled true
     }
 }
 
 dependencies {
+
+    def nav_version = "2.5.3"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -55,4 +57,17 @@ dependencies {
 
     // calendar - materialCalendarView
     implementation group: 'com.prolificinteractive', name: 'material-calendarview', version: '1.4.3'
+
+    // timetable view
+    implementation 'com.github.tlaabs:TimetableView:1.0.3-fx1'
+
+    // retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+
+
+    // bottom navigation view
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 }
