--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         </activity>
 
         <activity
-            android:name=".MainActivity"
+            android:name=".view.MainActivity"
             android:exported="false">
 
             <meta-data
@@ -34,8 +34,8 @@
                 android:value="" />
         </activity>
 
-        <activity android:name=".view.schedule_mgt.MonthlyCalendarActivity"/>
-        <activity android:name=".view.schedule_mgt.WeeklyCalendarActivity"/>
+        <activity android:name=".view.schedule.MonthlyCalendarActivity"/>
+        <activity android:name=".view.schedule.DailyCalendarActivity"/>
 
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
