--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-
+    // viewpager2
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
 
     // bottom navigation view
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
