--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,7 @@
         <activity android:name=".view.SplashActivity"
             android:exported="true"
             android:theme="@style/Theme.ShareHands_frontend.SplashScreen">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
         </activity>
 
@@ -36,6 +32,14 @@
 
         <activity android:name=".view.schedule.MonthlyCalendarActivity"/>
         <activity android:name=".view.schedule.DailyCalendarActivity"/>
+        <activity android:name=".view.search.ServiceDetailActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
