[ADD] 소셜 로그인 및 약관동의 레이아웃 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,13 +33,18 @@
         <activity android:name=".view.schedule.MonthlyCalendarActivity"/>
         <activity android:name=".view.schedule.DailyCalendarActivity"/>
         <activity android:name=".view.search.ServiceDetailActivity"/>
-        <activity android:name=".view.search.RecruitActivity"
+        <activity android:name=".view.search.RecruitActivity">
+
+        </activity>
+        <activity android:name=".view.signin.SocialLoginActivity"/>
+        <activity android:name=".view.signin.TermsAgreeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
 
 
