--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,7 @@
 
         </activity>
         <activity android:name=".view.signin.PermissionsAgreeActivity"/>
-
+        <activity android:name=".view.signin.UserInfoWriteActivity"/>
 
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
