--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+    // google login
+    implementation platform('com.google.firebase:firebase-bom:30.0.1')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.android.gms:play-services-auth:20.5.0'
+
     // kakao login
     implementation "com.kakao.sdk:v2-all:2.13.0"
 
