[FIX] 일정관리 월별 일정 일자 선택 시 표시방식 변경 및 월별 봉사 목록 레이아웃 Bottom Sheet으로 변경

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,7 @@ dependencies {
     // bottom navigation view
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    // bottom sheet(height 크기 조절한 뷰)
+    implementation 'com.google.android.material:material:1.8.0-alpha01'
 }
