--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,8 +29,7 @@
         </activity>
 
         <activity
-            android:name=".view.MainActivity"
-            android:exported="false">
+            android:name=".view.MainActivity">
 
             <meta-data
                 android:name="android.app.lib_name"
@@ -46,6 +45,7 @@
         <activity android:name=".view.signin.PermissionsAgreeActivity"/>
         <activity android:name=".view.signin.UserInfoWriteActivity"/>
         <activity android:name=".view.signin.UserPreferencesActivity"/>
+        <activity android:name=".view.search.ServiceWriteActivity"/>
 
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
