--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,4 +79,7 @@ dependencies {
 
     // bottom sheet(height 크기 조절한 뷰)
     implementation 'com.google.android.material:material:1.8.0-alpha01'
+
+    // glide
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
 }
