--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,8 @@ dependencies {
 
     // glide
     implementation 'com.github.bumptech.glide:glide:4.15.1'
+
+    // kakao map
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation files('libs/libDaumMapAndroid.jar')
 }
