--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,13 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.ShareHands_frontend"
         tools:targetApi="31">
+
+        <meta-data
+            android:name="com.kakao.sdk.AppKey"
+            android:value="b03a4ceae5d55bdc92ecfbe00ddaf2c1" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -58,6 +63,7 @@
         <activity android:name=".view.signin.UserInfoWriteActivity"/>
         <activity android:name=".view.signin.UserPreferencesActivity"/>
         <activity android:name=".view.search.ServiceWriteActivity"/>
+        <activity android:name=".view.search.LocationSearchActivity"/>
 
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
