[FEAT] 마이페이지, 봉사 찾기 네트워크 통신 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -80,6 +80,7 @@
         <activity android:name=".view.mypage.FAQActivity"/>
         <activity android:name=".view.mypage.ContactActivity"/>
         <activity android:name=".view.mypage.WithdrawActivity"/>
+        <activity android:name=".view.mypage.UserInfoActivity"/>
 
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
