[FEAT] 전화번호 입력 표현식 오류 수정

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,4 +97,7 @@ dependencies {
     // room db
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+
+    // dot indicator
+    implementation "com.tbuonomo:dotsindicator:4.2"
 }
