[FEAT] 거절 및 사용자 프로필 확인

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -105,6 +105,7 @@
         <activity android:name=".view.BlockActivity"/>
         <activity android:name=".view.ReportReviewActivity"/>
         <activity android:name=".view.ReportServiceActivity"/>
+        <activity android:name=".view.search.ApplicantInfoActivity"/>
 
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
