--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,7 +56,8 @@
 
         <activity android:name=".view.SplashActivity"
             android:theme="@style/Theme.ShareHands_frontend.SplashScreen"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -68,7 +69,8 @@
 
         <activity
             android:name=".view.MainActivity"
-            android:exported="false">
+            android:exported="false"
+            android:screenOrientation="portrait">
 
             <meta-data
                 android:name="android.app.lib_name"
